# ai-playground

./: README.md
.github/workflows/: ci.yml  stock-gift-value-ci.yml
blog/: IMPORT_BLOG_PLAN.md
blog/Takeout/: GITHUB_PAGES_SETUP.md  archive_browser.html  blogger_to_jekyll.py  download_images.py
blog/Takeout/jekyll_output/: images_to_download.txt
docs/: IMPORT_BLOG_PLAN.md  MIGRATION_SUMMARY.md
docs/Takeout/: DEPLOYMENT_OPTIONS.md
docs/Takeout/blog_site/: _config.yml
python/: README.md
stats-study-guide/: 01-chi-square-distribution.md  02-linear-regression-correlation.md  03-f-distribution-anova.md  COIN_FLIP_RESULTS.txt  README.md
stats-study-guide/data/: random_coin_flips.txt  user_coin_flips.txt
stats-study-guide/scripts/: advanced_compression.py  analyze_coin_flips.py  anova_helper.py  compression_analysis.py  generate_coin_flips.py  huffman_compression.py  pyproject.toml  regression_helper.py  runlength_huffman.py
stock-gift-value/: .eslintrc.json  CLAUDE.md  REFACTORING.md  eslint.config.js  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
stock-gift-value/api/: logger.ts  tickerSearchClient.ts  validators.ts  yahooFinanceClient.ts
stock-gift-value/shared/: types.ts
stock-gift-value/src/: main.tsx
typescript/: README.md
typescript/stock-gift-value/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  README.md  REFACTORING.md  SPEC.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  tsconfig.test.json  vite.config.ts
(+92 files in other folders)
