[tool.poetry]
name = "stats-study-guide"
version = "1.0.0"
description = "Python scripts for probability and statistics study guide"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
scipy = "^1.11"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
